[package]
name = "stickers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.64"
reqwest-wasm = {version="0.11.16", features = ["blocking"] }
wasm-bindgen-futures = "0.4.37"
urlencoding = "2.1.3"
serde_json = "1.0"
thiserror = "1.0.44"
xmltree = "0.10.3"
qrcode-generator = "4.1.8"
zip = { version="0.6.6", default-features = false, features=["deflate"] }
base64 = "0.21.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
